--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-<div class="blog-cover" style="background-image:url(/images/{{ site.inc.cover_image }});">
+<div class="blog-cover" style="background-image:url({{ site.url }}/images/{{ site.inc.cover_image }});">
     
     <section>
         <div class="container">
